testdata/good/before/6.use-inside-if.tw
@if(true)@use("layouts/2.with-inserts")@end

@if(true)@insert("title", "Home page")@end

@insert("content")
<h1>Home page</h1>
<p>Some content</p>
@end