testdata/bad/unknown-named-pass/index.tw
@component("user", { name: "Anna" })
    @pass("unknown")
        <p>Some content</p>
    @end
@end